[gd_scene load_steps=9 format=3 uid="uid://dk0iotlgj0omy"]

[ext_resource type="Script" uid="uid://hbwumtykd6td" path="res://scene/exploration/Exploration.gd" id="1_u1wya"]
[ext_resource type="Script" uid="uid://bqlnc5laeh51e" path="res://scene/exploration/ExplorationManager.gd" id="2_dxjkk"]
[ext_resource type="PackedScene" uid="uid://b3nhik41pq50h" path="res://scene/item_management/player_screen.tscn" id="9_wfrkh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pme05"]
bg_color = Color(0.47451, 0.47451, 0.47451, 0.352941)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_lhpby"]
Panel/styles/panel = SubResource("StyleBoxFlat_pme05")

[sub_resource type="LabelSettings" id="LabelSettings_y4bjt"]
font_size = 17
shadow_color = Color(0.176419, 0.176419, 0.176419, 0.427451)

[sub_resource type="LabelSettings" id="LabelSettings_g1dy5"]
font_size = 22
shadow_color = Color(0.176471, 0.176471, 0.176471, 0.427451)

[sub_resource type="LabelSettings" id="LabelSettings_k4akk"]
font_size = 31
font_color = Color(0.0980392, 0.0313726, 0.0980392, 1)

[node name="Explore" type="CanvasLayer"]

[node name="Exploration" type="Node" parent="."]
script = ExtResource("1_u1wya")

[node name="Background" type="ColorRect" parent="."]
z_index = -2
offset_right = 1279.0
offset_bottom = 721.0
color = Color(0.881062, 0.826031, 0.438953, 1)
script = ExtResource("2_dxjkk")

[node name="RoomPanel" type="Panel" parent="Background"]
layout_mode = 0
offset_left = 89.0
offset_top = 99.0
offset_right = 257.0
offset_bottom = 158.0
theme = SubResource("Theme_lhpby")

[node name="FloorLabel" type="Label" parent="Background/RoomPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 24.0
offset_right = 164.0
offset_bottom = 59.0
text = "Loot +20%"
label_settings = SubResource("LabelSettings_y4bjt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomLabel" type="Label" parent="Background/RoomPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = -3.0
offset_right = 164.0
offset_bottom = 32.0
text = "Stanza 1"
label_settings = SubResource("LabelSettings_g1dy5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpcomingLabel" type="Label" parent="Background"]
layout_mode = 0
offset_left = 329.0
offset_top = 41.0
offset_right = 489.0
offset_bottom = 87.0
text = "In arrivo"
label_settings = SubResource("LabelSettings_k4akk")

[node name="Path" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.201
anchor_top = 0.072
anchor_right = 0.201
anchor_bottom = 0.072
offset_left = 63.921
offset_top = 39.088
offset_right = 791.921
offset_bottom = 125.088

[node name="Panel" type="Panel" parent="Background/Path"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Path"]
layout_direction = 2
layout_mode = 2

[node name="PassedLabel" type="Label" parent="Background"]
layout_mode = 0
offset_left = 925.0
offset_top = 43.0
offset_right = 1045.0
offset_bottom = 87.0
text = "Passate"
label_settings = SubResource("LabelSettings_k4akk")

[node name="Passed" type="MarginContainer" parent="Background"]
layout_mode = 0
offset_left = 322.0
offset_top = 90.0
offset_right = 1042.0
offset_bottom = 176.0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Passed"]
visible = false
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Choices" type="MarginContainer" parent="Background"]
layout_mode = 0
offset_left = 108.0
offset_top = 287.0
offset_right = 1030.0
offset_bottom = 579.0

[node name="Panel" type="Panel" parent="Background/Choices"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Choices"]
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayerScreen" parent="." instance=ExtResource("9_wfrkh")]
visibility_layer = 512
offset_left = 2.0
offset_right = -1.0
offset_bottom = 1.0
